--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -55,7 +55,7 @@
           <div class="ui stackable three column center aligned grid">
             <div class={{if (eq properties.function "join") "seven wide column" "sixteen wide column"}}>
               <div class={{if (eq properties.function "join") "hidden"}}>
-                {{#ui-dropdown class="selection fluid" selected=properties.column onChange=(action "chooseField" field) as |execute mapper|}}
+                {{#ui-dropdown class="selection fluid" selected=properties.fields.firstObject onChange=(action "chooseField" field) as |execute mapper|}}
                   <div class="default text">
                     Source column headings
                   </div>
@@ -137,8 +137,10 @@
               {{else if properties.function}}
                 <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
               {{else}}
-                <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
-                <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                {{#if properties.fields}}
+                  <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
+                  <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                {{/if}}
               {{/if}}
               {{#if (eq model.webServiceResponse.conform.type "csv")}}
                   {{#unless (eq currentField "lat")}}
