--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -58,11 +58,7 @@
               {{#if (eq properties.function "join")}}
                 {{join-column field=field properties=properties showAdditionalJoinDropdown=showAdditionalJoinDropdown columnHeadings=columnHeadings model=model}}
               {{else if (eq properties.function "split")}}
-                <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_street_pattern" field}}>Remove prefix number</button>
-                <button class="ui button basic green" onClick={{action "extractionFunction" "prefixed_number_pattern" field}}>Remove postfix street</button>
-                <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Remove prefix unit</button>
-                <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_unit_pattern" field}}>Remove postfix unit</button>
-                <button class="ui button basic blue" onClick={{action "removeFunction" field}}>Remove split <i class="remove icon"></i></button>
+                {{split-column field=field properties=properties columnHeadings=columnHeadings model=model}}
               {{else if properties.function}}
                 <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
               {{else}}
