--- a/app/templates/components/join-column.hbs
+++ b/app/templates/components/join-column.hbs
@@ -35,19 +35,21 @@
   <a class="item">
     <i class="plus icon"></i>
   </a>
-  {{#ui-dropdown class="selection fluid" onChange=(action "addField" field) as |execute mapper|}}
-    <div class="default text">
-      Source column headings
-    </div>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      {{#each columnHeadings as |heading|}}
-        <div class="item" data-value="{{map-value mapper heading}}">
-          {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
-        </div>
-      {{/each}}
-    </div>
-  {{/ui-dropdown}}
+  <div class="fifteen wide field">
+    {{#ui-dropdown class="selection fluid" onChange=(action "addField" field) as |execute mapper|}}
+      <div class="default text">
+        Source column headings
+      </div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        {{#each columnHeadings as |heading|}}
+          <div class="item" data-value="{{map-value mapper heading}}">
+            {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+          </div>
+        {{/each}}
+      </div>
+    {{/ui-dropdown}}
+  </div>
 {{/if}}
 <div>
   {{#if showAdditionalJoinButton}}
