--- a/app/templates/components/select-column.hbs
+++ b/app/templates/components/select-column.hbs
@@ -1,4 +1,4 @@
-<div class={{if (eq properties.function "join") "hidden"}}>
+<div class="fifteen wide field">
   {{#ui-dropdown class="selection fluid" selected=properties.fields.firstObject onChange=(action "chooseField" field) as |execute mapper|}}
     <div class="default text">
       Source column headings
