--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,25 +1,27 @@
 <div class="ui text container">
 	<h3 class="first headroom">Contact information</h3>
-	{{#with (changeset model MaintainerValidator) as |changeset|}}
-		<div class="ui grid">
-			<div class="eight wide column ui form">
-				{{validated-input
-					label="Name"
-					propertyName="maintainer_name"
-					placeholder="name"
-					changeset=changeset
-					showErrorState=showErrorState}}
-			</div>
-			<div class="eight wide column ui form">
-				{{validated-input
-					label="Email address"
-					propertyName="maintainer_email"
-					placeholder="email address"
-					required=true
-					changeset=changeset
-					showErrorState=showErrorState}}
-			</div>
-		</div>
-		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" forwardButtonText="Review" changeset=changeset}}
-	{{/with}}
+  <div class="form-content">
+  	{{#with (changeset model MaintainerValidator) as |changeset|}}
+  		<div class="ui grid">
+  			<div class="eight wide column ui form">
+  				{{validated-input
+  					label="Name"
+  					propertyName="maintainer_name"
+  					placeholder="name"
+  					changeset=changeset
+  					showErrorState=showErrorState}}
+  			</div>
+  			<div class="eight wide column ui form">
+  				{{validated-input
+  					label="Email address"
+  					propertyName="maintainer_email"
+  					placeholder="email address"
+  					required=true
+  					changeset=changeset
+  					showErrorState=showErrorState}}
+  			</div>
+  		</div>
+  		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" forwardButtonText="Review" changeset=changeset}}
+  	{{/with}}
+  </div>
 </div>
