--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -3,21 +3,23 @@
   <p>
     Provide link to data or upload data. (add information about accepted formats)
   </p>
-  <div class="ui labeled input">
-    <div class="ui label">
-      URL
+  <div class="form-content">
+    <div class="ui labeled input">
+      <div class="ui label">
+        URL
+      </div>
+      <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
     </div>
-    <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
-  </div>
-  <div class="ui horizontal divider">
-    Or
-  </div>
-  <div>
-    <label for="uploadfile" class="ui icon button">
-      <i class="file icon"></i>
-      Choose file to upload
-    </label>
-    <input type="file" id="uploadfile" style="display:none" onChange={{action "uploadFile"}}>{{fileName}}
+    <div class="ui horizontal divider">
+      Or
+    </div>
+    <div>
+      <label for="uploadfile" class="ui icon button">
+        <i class="file icon"></i>
+        Choose file to upload
+      </label>
+      <input type="file" id="uploadfile" style="display:none" onChange={{action "uploadFile"}}>{{fileName}}
+    </div>
   </div>
   {{nav-buttons sendChangeRoute="changeRoute" next="more-info"}}
 </div>
