added 4em margin above nav buttons on every page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -41,6 +41,10 @@ h5 {
   margin-top: 2em;
 }
 
+.nav-button {
+  margin-top: 4em !important;
+}
+
 /* add feed progress tabs styling */
 nav {
   padding: 0px;
