--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,11 +6,11 @@
 	<div class="ui vertical stripe segment"></div>
   <nav class="progress">
     <ul>
-      <li class={{if (eq currentRouteName 'intro') "active"}}> Data </li>
-      <li class={{if (eq currentRouteName 'more-info') "active"}}> More Info </li>
-      <li class={{if (eq currentRouteName 'mapping.index') "active"}}> Column Mapping </li>
-      <li class={{if (eq currentRouteName 'contact') "active"}}> Contact Info </li>
-      <li class={{if (eq currentRouteName 'review') "active"}}> Review </li>
+      <li class={{if (eq currentRouteName 'intro') "active"}}> 1. Data </li>
+      <li class={{if (eq currentRouteName 'more-info') "active"}}> 2. More Info </li>
+      <li class={{if (eq currentRouteName 'mapping.index') "active"}}> 3. Column Mapping </li>
+      <li class={{if (eq currentRouteName 'contact') "active"}}> 4. Contact Info </li>
+      <li class={{if (eq currentRouteName 'review') "active"}}> 5. Review </li>
     </ul>
   </nav>
 </div>
