--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -14,7 +14,7 @@
       Or
     </div>
     <div>
-      <label for="uploadfile" class="ui icon button">
+      <label for="uploadfile" class="ui upload icon button">
         <i class="file icon"></i>
         Choose file to upload
       </label>
