--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -9,14 +9,41 @@
         <h4 class="ui dividing header">License information</h4>
         <label>Does the data have a license?</label>
         <button class="ui button {{if (eq model.license_exists true) "active"}}" {{action "licenseExists" true}}>Yes</button>
-        <button class="ui button {{if (eq model.license_exists false) "active"}}" {{action "licenseExists" false}}>No</button>
-        <button class="ui button {{if (eq model.license_exists "unknown") "active"}}" {{action "licenseExists" "unknown"}}>I don't know</button>
+        <button class="ui button none {{if (eq model.license_exists false) "active"}}" {{action "licenseExists" false}}>No</button>
+        <button class="ui button none {{if (eq model.license_exists "unknown") "active"}}" {{action "licenseExists" "unknown"}}>I don't know</button>
       </div>
       {{#if (eq model.license_exists true)}}
         <form class="ui form">
-          <div class="field">
-            <div class="fields ui stackable grid">
-              <div class="seven wide field">
+          <div class="grouped inline required license fields">
+            <label> Add a license </label>
+            <div class="field">
+              {{ui-radio name="license" label="Choose from license" value="choose" current=license onChange=(action (mut license))}}
+              {{#if (eq license "choose")}}
+              <div class="field">
+                {{#ui-dropdown class="license selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
+                  <div class="default text">Licenses</div>
+                  <i class="dropdown icon"></i>
+                  <div class="menu">
+                    {{#each licenses as | license |}}
+                      <div class="item" data-value={{map-value mapper license}}>
+                        {{license.name}}
+                      </div>
+                    {{/each}}
+                  </div>
+                {{/ui-dropdown}}
+              </div>
+              {{/if}}
+            </div>
+            <div class="field">
+              {{ui-radio name="license" label="Provide link to license" value="provide" current=license onChange=(action (mut license))}}
+              {{#if (eq license "provide")}}
+                <div class="field">
+                  <input type="text" class="license" placeholder="www.sample.com..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
+                </div>
+              {{/if}}
+            </div>
+          </div>
+              <!-- <div class="seven wide field">
                 <label>Choose from license</label>
                 {{#ui-dropdown class="selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
                   <div class="default text">Licenses</div>
@@ -36,9 +63,7 @@
               <div class="seven wide field">
                 <label>Provide link to license</label>
                 <input type="text" placeholder="www.sample.com..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
-              </div>
-            </div>
-          </div>
+              </div> -->
         </form>
         <div class="field">
           <div class="inline field">
