use house number instead of number, just in templating

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -6,7 +6,15 @@
         {{#each-in model.submission.oaFields as |field properties|}}
           {{#unless (eq field "lon")}}
             {{#unless (eq field "lat")}}
-              <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>{{field}}</a></th>
+              <th>
+                <a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>
+                  {{#if (eq field "number")}}
+                    house number
+                  {{else}}
+                    {{field}}
+                  {{/if}}
+                </a>
+              </th>
             {{/unless}}
           {{/unless}}
           {{#if (eq field "lon")}}
