--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -14,35 +14,39 @@
       </div>
       {{#if (eq model.license_exists true)}}
         <form class="ui form">
-          <div class="grouped inline required license fields">
+          <div class="inline required fields">
             <label> Add a license </label>
-            <div class="field">
-              {{ui-radio name="license" label="Choose from license" value="choose" current=license onChange=(action (mut license))}}
-              {{#if (eq license "choose")}}
+            <div class="grouped fields">
               <div class="field">
-                {{#ui-dropdown class="license selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
-                  <div class="default text">Licenses</div>
-                  <i class="dropdown icon"></i>
-                  <div class="menu">
-                    {{#each licenses as | license |}}
-                      <div class="item" data-value={{map-value mapper license}}>
-                        {{license.name}}
-                      </div>
-                    {{/each}}
-                  </div>
-                {{/ui-dropdown}}
+                {{ui-radio name="license" label="Choose from license" value="choose" current=license onChange=(action (mut license))}}
               </div>
-              {{/if}}
-            </div>
-            <div class="field">
-              {{ui-radio name="license" label="Provide link to license" value="provide" current=license onChange=(action (mut license))}}
-              {{#if (eq license "provide")}}
-                <div class="field">
-                  <input type="text" class="license" placeholder="www.sample.com..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
-                </div>
-              {{/if}}
+              <div class="field">
+                {{ui-radio name="license" label="Provide link to license" value="provide" current=license onChange=(action (mut license))}}
+              </div>
             </div>
           </div>
+          {{#if (eq license "choose")}}
+          <div class="required twelve wide field">
+            <label> Choose a license </label>
+            {{#ui-dropdown class="license selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
+              <div class="default text">Licenses</div>
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                {{#each licenses as | license |}}
+                  <div class="item" data-value={{map-value mapper license}}>
+                    {{license.name}}
+                  </div>
+                {{/each}}
+              </div>
+            {{/ui-dropdown}}
+          </div>
+          {{/if}}
+          {{#if (eq license "provide")}}
+            <div class="required twelve wide field">
+              <label> Provide a link to license </label>
+              <input type="text" class="license" placeholder="www.sample.com..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
+            </div>
+          {{/if}}
               <!-- <div class="seven wide field">
                 <label>Choose from license</label>
                 {{#ui-dropdown class="selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
@@ -73,8 +77,8 @@
         <div class="field">
           <label>Does the license require attribution?</label>
           <button class="ui button {{if (eq model.attribution true) "active"}}" {{action "setAttribution" true}}>Yes</button>
-          <button class="ui button {{if (eq model.attribution false) "active"}}" {{action "setAttribution" false}}>No</button>
-          <button class="ui button {{if (eq model.attribution "unknown") "active"}}" {{action "setAttribution" "unknown"}}>I don't know</button>
+          <button class="ui button none {{if (eq model.attribution false) "active"}}" {{action "setAttribution" false}}>No</button>
+          <button class="ui button none {{if (eq model.attribution "unknown") "active"}}" {{action "setAttribution" "unknown"}}>I don't know</button>
         </div>
         {{#if (eq model.attribution true)}}
           <div class="field">
