--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,7 +8,7 @@
     <ul>
       <li class={{if (eq currentRouteName 'intro') "active"}}> 1. Data Source </li>
       <li class={{if (eq currentRouteName 'more-info') "active"}}> 2. Data Information </li>
-      <li class={{if (eq currentRouteName 'mapping.index') "active"}}> 3. Column Mapping </li>
+      <li class={{if (eq currentRouteName 'data-format') "active"}}> 3. Column Mapping </li>
       <li class={{if (eq currentRouteName 'contact') "active"}}> 4. Contact </li>
       <li class={{if (eq currentRouteName 'review') "active"}}> 5. Review </li>
     </ul>
