--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -7,7 +7,9 @@
           {{#each-in model.submission.oaFields as |field properties|}}
             {{#unless (eq field "lon")}}
               {{#unless (eq field "lat")}}
-                <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>{{field}}</a></th>
+                <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>
+                  {{field}} {{#if (or (eq field "number") (eq field "street"))}} <span class="required"> * </span> {{/if}}
+                </a></th>
               {{/unless}}
             {{/unless}}
             {{#if (eq field "lon")}}
