--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -24,7 +24,7 @@
     </div>
     <div class="ui hidden divider"></div>
     <div class="ui attached message">
-      <button class="ui labeled icon right floated blue basic button mini" onClick={{action "editField" "more-info"}}><i class="icon edit"></i>Edit</button>
+      <span class="review edit" onClick={{action "editField" "more-info"}}> <i class="icon edit"></i>Edit</span>
       <h3 class="ui header">More Info</h3>
     </div>
     <div class="ui segment attached">
@@ -81,7 +81,7 @@
     </div>
     <div class="ui hidden divider"></div>
     <div class="ui attached message">
-      <button class="ui labeled icon right floated blue basic button mini" onClick={{action "editField" "contact"}}><i class="icon edit"></i>Edit</button>
+      <span class="review edit" onClick={{action "editField" "contact"}}><i class="icon edit"></i>Edit</span>
       <h3 class="ui header">Maintainer Contact Information</h3>
     </div>
     <div class="ui segment attached">
@@ -111,7 +111,7 @@
     </div>
     <div class="ui hidden divider"></div>
     <div class="ui attached message">
-      <button class="ui labeled icon right floated blue basic button mini" onClick={{action "editField" "data-format"}}><i class="icon edit"></i>Edit</button>
+      <span class="review edit" onClick={{action "editField" "data-format"}}><i class="icon edit"></i>Edit</span>
       <h3 class="ui header">Data format</h3>
     </div>
     <div class="ui segment attached">
