--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -4,7 +4,7 @@
     Provide link to data or upload data. (add information about accepted formats)
   </p>
   <div class="form-content">
-    <div class="ui labeled input">
+    <div class="ui url labeled input">
       <div class="ui label">
         URL
       </div>
