--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -49,7 +49,7 @@
           {{/if}}
         </form>
         <div class="field">
-          <div class="inline field">
+          <div class="inline sharealike field">
            {{ui-checkbox label="License is share-alike" checked=(if model.share_alike "checked" "") onChange=(action "setShareAlike")}}
           </div>
         </div>
