--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -5,7 +5,7 @@
   </p>
   <div class="form-content">
     <div class="ui form segment">
-      <div class="field">
+      <div class="required field">
         <h4 class="ui dividing header">License information</h4>
         <label>Does the data have a license?</label>
         <button class="ui button {{if (eq model.license_exists true) "active"}}" {{action "licenseExists" true}}>Yes</button>
@@ -53,7 +53,7 @@
            {{ui-checkbox label="License is share-alike" checked=(if model.share_alike "checked" "") onChange=(action "setShareAlike")}}
           </div>
         </div>
-        <div class="field">
+        <div class="required field">
           <label>Does the license require attribution?</label>
           <button class="ui button {{if (eq model.attribution true) "active"}}" {{action "setAttribution" true}}>Yes</button>
           <button class="ui button none {{if (eq model.attribution false) "active"}}" {{action "setAttribution" false}}>No</button>
@@ -69,7 +69,7 @@
       <div class="ui hidden divider"></div>
       <div class="field">
         <h4 class="ui dividing header">Data information</h4>
-        <div class="field">
+        <div class="required field">
           <label>Frequency of update</label>
           {{#ui-dropdown class="selection" selected=model.update_frequency onChange=(action "setFrequency") as | execute mapper|}}
             <div class="default text">Frequency</div>
