added required field message

--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -4,6 +4,12 @@
     We'll gather more info from the user about license/attribution/update frequency here.
   </p>
   <div class="form-content">
+    <div class="ui small teal message">
+      <p>
+        <span class="required"> * </span>
+        required fields
+      </p>
+    </div>
     <div class="ui form segment">
       <div class="required field">
         <h4 class="ui dividing header">License information</h4>
