added required field message to all pages

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,6 +1,10 @@
 <div class="ui text container">
   <h3 class="first headroom">Data format</h3>
   <div class="form-content">
+    <div class="ui teal tiny message">
+      <p> <span class="required"> * </span>
+        indicates field is <b> required </b> to proceed </p>
+    </div>
     <table class="ui celled table">
       <thead>
         <tr>
