--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,6 +1,10 @@
 <div class="ui text container">
 	<h3 class="first headroom">Contact information</h3>
   <div class="form-content">
+    <div class="ui teal tiny message">
+      <p> <span class="required"> * </span>
+        indicates field is <b> required </b> to proceed </p>
+    </div>
   	{{#with (changeset model MaintainerValidator) as |changeset|}}
   		<div class="ui grid">
   			<div class="eight wide column ui form">
