--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -131,31 +131,31 @@
                   {{/if}}
                   <div>
                     {{#if showAdditionalJoinButton}}
-                      <button class="ui button basic blue" onClick={{action "addJoin" field}}>Join another column <i class="plus icon"></i></button>
+                      <button class="ui small button basic blue" onClick={{action "addJoin" field}}>Join another column <i class="plus icon"></i></button>
                     {{/if}}
-                    <button class="ui button basic blue" onClick={{action "removeFunction" field}}>Remove join <i class="remove icon"></i></button>
+                    <button class="ui small button basic blue" onClick={{action "removeFunction" field}}>Remove join <i class="remove icon"></i></button>
                   </div>
                 {{else if (eq properties.function "split")}}
-                  <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_street_pattern" field}}>Remove prefix number</button>
-                  <button class="ui button basic green" onClick={{action "extractionFunction" "prefixed_number_pattern" field}}>Remove postfix street</button>
-                  <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Remove prefix unit</button>
-                  <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_unit_pattern" field}}>Remove postfix unit</button>
-                  <button class="ui button basic blue" onClick={{action "removeFunction" field}}>Remove split <i class="remove icon"></i></button>
+                  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_pattern" field}}>Remove prefix number</button>
+                  <button class="ui small button basic green" onClick={{action "extractionFunction" "prefixed_number_pattern" field}}>Remove postfix street</button>
+                  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Remove prefix unit</button>
+                  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_unit_pattern" field}}>Remove postfix unit</button>
+                  <button class="ui small button basic blue" onClick={{action "removeFunction" field}}>Remove split <i class="remove icon"></i></button>
                 {{else if properties.function}}
-                  <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
+                  <button class="ui small button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
                 {{else}}
                   {{#if properties.fields}}
-                    <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
-                    <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                    <button class="ui small button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
+                    <button class="ui small button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
                   {{/if}}
                 {{/if}}
                 {{#if (eq model.webServiceResponse.conform.type "csv")}}
                     {{#unless (eq currentField "lat")}}
-                      <button class="ui button" onClick={{action "nextField" field}}>Looks good, move on to {{nextField}} <i class="right arrow icon"></i></button>
+                      <button class="ui small button" onClick={{action "nextField" field}}>Looks good, move on to {{nextField}} <i class="right arrow icon"></i></button>
                     {{/unless}}
                   {{else}}
                     {{#unless (eq currentField "postcode")}}
-                      <button class="ui button" onClick={{action "nextField" field}}>Move on to {{nextField}} <i class="right arrow icon"></i></button>
+                      <button class="ui small button" onClick={{action "nextField" field}}>Move on to {{nextField}} <i class="right arrow icon"></i></button>
                     {{/unless}}
                   {{/if}}
               </div>
