hide/show functions depending on field

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -74,7 +74,13 @@
               {{else}}
                 {{#if properties.fields}}
                   <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
-                  <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                  {{#unless (eq field "city")}}
+                    {{#unless (eq field "region")}}
+                      {{#unless (eq field "district")}}
+                        <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                      {{/unless}}
+                    {{/unless}}
+                  {{/unless}}
                 {{/if}}
               {{/if}}
               {{#if (eq model.webServiceResponse.conform.type "csv")}}
